--- a/404.md
+++ b/404.md
@@ -1,5 +1,5 @@
 ---
-title: Chris Heuberger / wat
+title: Chris Heuberger / Wat
 layout: default
 permalink: /404
 ---
@@ -9,7 +9,7 @@ permalink: /404
   <div class="broken-container">
     <h1 class="broken-header">Uh-oh! <span>Four, oh four.</span></h1>
     <p class="broken-text">Sorry, but the page you’re trying to view doesn’t exist.</p>
-    <p class="broken-text"><a class="broken-link text-link" href="index.html">Go to the homepage</a></p>
+    <p class="broken-text"><a class="broken-link text-link" href="/">Go to the homepage</a></p>
   </div>
 
 </div>
